# hok

./: CHANGELOG.md  Cargo.toml  README-zh.md  README.md  check_helpers.py  用 Rust 写的 Scoop 再实现 - Chawye Hsu.md
asset_scripts/: core.ps1  decompress.ps1  helpers.md
crates/hok-shim/: Cargo.toml
crates/hok-shim/src/: main.rs
crates/libscoop/: Cargo.toml
crates/libscoop/src/: bucket.rs  config.rs  constant.rs  error.rs  event.rs  lib.rs  operation.rs  persist.rs  session.rs  shim.rs  shortcut.rs
crates/libscoop/src/internal/: archive.rs  env.rs  fs.rs  git.rs  manifest_cache.rs  mod.rs  network.rs  os.rs  path.rs
crates/libscoop/src/package/: download.rs  manifest.rs  mod.rs  query.rs  resolve.rs  sync.rs
crates/libscoop/tests/: compare_versions.rs  manifest_parse.rs
crates/libscoop/tests/fixtures/: architecture.json  checkver.json  dependencies.json  simple.json
crates/libscoop/tests/fixtures/scoop-original/: README.md
crates/scoop_hash/: Cargo.toml
crates/scoop_hash/src/: lib.rs
scripts/: analyze-bucket.ps1  known-helpers.txt
src/: lib.rs  output.rs  util.rs
src/cmd/: alias.rs  bucket.rs  cache.rs  cat.rs  checkhashes.rs  checkup.rs  checkurls.rs  checkver.rs  cleanup.rs  config.rs  create.rs  depends.rs  export.rs  formatjson.rs  hold.rs  home.rs  import.rs  info.rs  install.rs  list.rs  missing_checkver.rs  mod.rs  prefix.rs  reinstall.rs  reset.rs  search.rs  shim.rs  status.rs  unhold.rs  uninstall.rs  update.rs  upgrade.rs  virustotal.rs  which.rs
