[package]
name = "hok"
description = "Hok is a CLI implementation of Scoop in Rust"
repository = "https://github.com/chawyehsu/hok"
version = "0.2.0-alpha.2"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>", "沙漠之子 <7850715+maboloshi@users.noreply.github.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace]
members = ["crates/libscoop", "crates/scoop_hash", "crates/hok-shim"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["wrap_help", "cargo", "derive"] }
clap-verbosity-flag = { version = "3.0.1", features = ["tracing"], default-features = false }
clap_complete = "4.5.38"
crossterm = "0.28"
indicatif = "0.17.9"
jsonpath-rust = "1.0"
regex = { version = "1.5.3", default-features = false, features = ["std", "unicode-case", "perf"] }
remove_dir_all = "0.7.0"
serde_json = "1.0.120"
scoop-hash = { version = "0.2.0-alpha.1", path = "./crates/scoop_hash" }
sxd-document = "0.3"
sxd-xpath = "0.4"
ureq = { version = "3", features = ["json"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.libscoop]
version = "0.2.0-alpha.2"
path = "./crates/libscoop"

[profile.release]
debug = false
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug = true
strip = false
