[package]
name = "libscoop"
description = "Rust library implementation of Scoop"
repository = "https://github.com/chawyehsu/hok"
documentation = "https://docs.rs/libscoop"
version = "0.1.0-beta.8"
authors = ["Chawye Hsu <su+cratesio@chawyehsu.com>"]
categories = ["command-line-utilities"]
keywords = ["package-manager", "windows", "scoop"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[dependencies]
# curl = { version = "0.4", features = ["static-curl"] }
dirs = "5.0.1"
flume = "0.10"
jiff = "0.2"
git2 = "0.19.0"
rayon = "1.7.0"
regex = { version = "1.5.3", default-features = false, features = ["std", "unicode-case", "perf"] }
remove_dir_all = "0.7.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0"
tracing = "0.1.41"
ureq = "3"

# Archive — pure Rust crates (no cmake/bindgen needed)
sevenz-rust2 = "0.21"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
lzma-rs = "0.3"
unarc-rs = "0.6"
zstd = { version = "0.13", default-features = false }
bzip2 = "0.6.1"

[dependencies.scoop-hash]
version = "0.1.0-beta.8"
path = "../scoop_hash"

[target.'cfg(windows)'.dependencies]
junction = "1.2.0"
winreg = "0.52"
innospect = "0.1"

[features]
default = []
